fix home docs page button on mobile & tablet (#19646)

--- a/assets/sass/_base.sass
+++ b/assets/sass/_base.sass
@@ -1052,6 +1052,9 @@ dd
   a.issue
     margin-left: 0px
 
+.gridPageHome .flyout-button
+  display: none
+
 .feedback--no
   margin-left: 1em
 
